--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </li>
               <li>
                 <i class="bi bi-telephone"></i>
-                <a href="tel:+71234567890">+7 (123) 456-78-90</a>
+                <a href="tel:+79818087272">+7 (981) 808-72-72</a>
               </li>
             </ul>
           </li>
@@ -69,12 +69,12 @@
           <li class="main__contacts-li col-3">
             <ul class="contacts__media justify-content-end">
               <li>
-                <a href="#">
+                <a target="_blank" href="https://wa.me/+79818087272">
                   <i class="bi bi-whatsapp"></i>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a target="_blank" href="https://t.me/Musorovichkov">
                   <i class="bi bi-telegram"></i>
                 </a>
               </li>
@@ -83,21 +83,23 @@
         </ul>
       </nav>
 
-      <section class="d-flex flex-column align-items-center">
-        <h1>Bezmusora.ru</h1>
+      <section
+        class="d-flex flex-column align-items-center justify-content-center"
+      >
+        <h1>Musorovichkov.com</h1>
 
-        <h2 class="mt-5">ООО "МУСОРВЫВОЗ"</h2>
+        <h2 class="mt-5 d-none">ООО "МУСОРВЫВОЗ"</h2>
         <h3>Надёжный партнёр</h3>
 
-        <h4 class="mt-5">Вывоз мусора Санкт-Петербург и ЛО</h4>
-        <h5>
+        <h4 class="mt-5 text-center">Вывоз мусора Санкт-Петербург и ЛО</h4>
+        <h5 class="text-center">
           В нашей компании вы получите действительно низкие цены с хорошим
           уровнем сервиса.
         </h5>
 
         <a href="#" class="main__cta-button mt-4 mb-5">ЗАКАЗАТЬ МАШИНУ</a>
 
-        <h6>
+        <h6 class="d-none">
           ВЫВОЗ МУСОРА И СТАРОЙ МЕБЕЛИ ОТ 450 РУБЛЕЙ ЗА МЕТР КУБИЧЕСКИЙ. ОТ 50
           РУБЛЕЙ ЗА МЕШОК.
         </h6>
@@ -105,14 +107,6 @@
     </main>
 
     <section class="conditions">
-      <h2>
-        Работаем с юридическими лицами, ИП и частными клиентами <br />
-        Выезд оценщика бесплатно <br />
-        Бесплатная подача машины за 30 минут <br />
-        Бесплатно предоставляем мешки <br />
-        Бесплатный вывоз чугунных ванн, радиаторов, бытовой техники
-      </h2>
-
       <div class="conditions__container">
         <div class="condition">
           <div class="checkmark">
@@ -129,11 +123,7 @@
           <div class="checkmark">
             <img src="img/icons/checkmark.svg" alt="Checkmark" />
           </div>
-          <h3>
-            Предоставляем услуги по вывозу и утилизации. Разрабатываем паспорта
-            отходов. Предоставляем справку с полигона. Экологическое
-            сопровождение.
-          </h3>
+          <h3>Предоставляем услуги по вывозу и утилизации.</h3>
           <a href="#" class="cta">Заказать</a>
         </div>
         <div class="condition">
@@ -151,7 +141,7 @@
     </section>
 
     <section class="advantages">
-      <h2>Наши преимущества</h2>
+      <h2 class="text-center">Наши преимущества</h2>
 
       <ul class="advantages__ul">
         <li>
@@ -159,7 +149,7 @@
             <i class="bi bi-truck"></i><span>Свой автопарк техники</span>
           </div>
         </li>
-        <li>
+        <li class="d-none">
           <div class="advantage">
             <i class="bi bi-pin-map"></i><span>Базы на юге и севере СПб</span>
           </div>
@@ -167,7 +157,7 @@
         <li>
           <div class="advantage">
             <i class="bi bi-lightning-charge"></i
-            ><span>Более 9-ти лет опыта</span>
+            ><span>Более 10 лет опыта</span>
           </div>
         </li>
       </ul>
@@ -186,31 +176,13 @@
           </p>
         </li>
       </ul>
-
-      <h4 class="mt-3 mb-5">
-        Наши крепкие, трезвые грузчики разберут и вынесут Вашу мебель, погрузят
-        и увезут на утилизацию. Оставят после себя чистоту. Разберём и вынесем
-        мусор после пожара, потопа, усопшего.
-      </h4>
-
-      <h5>
-        Всегда в исправном техническом состоянии наш автопарк техники, от самых
-        маленьких 6 кубовых микроавтобусов до 27 кубовых контейнеров пухто.
-        Газели 12, 14, 16 кубов, Феникс и БАФ 18 кубов. Самосвалы 20 кубов.
-        Время подачи машины от 30 мин (в зависимости от дорожной обстановки).
-      </h5>
-
-      <h6 class="mt-3">
-        Бесплатная подача машины <br />
-        Бесплатная оценка
-      </h6>
     </section>
 
     <section class="catalog" id="catalog">
       <h2>Наши цены</h2>
-      <div class="container p-5">
+      <div class="container-fluid p-5">
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-12">
             <div class="catalog__item">
               <div class="catalog__item-img">
                 <img
@@ -224,7 +196,7 @@
             </div>
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4 col-12">
             <div class="catalog__item">
               <div class="catalog__item-img">
                 <img
@@ -238,7 +210,7 @@
             </div>
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4 col-12">
             <div class="catalog__item">
               <div class="catalog__item-img">
                 <img
@@ -253,7 +225,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-12">
             <div class="catalog__item">
               <div class="catalog__item-img">
                 <img
@@ -267,7 +239,7 @@
             </div>
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4 col-12">
             <div class="catalog__item">
               <div class="catalog__item-img">
                 <img
@@ -281,7 +253,7 @@
             </div>
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4 col-12">
             <div class="catalog__item">
               <div class="catalog__item-img">
                 <img
@@ -298,68 +270,16 @@
       </div>
     </section>
 
-    <section class="clients">
-      <h2>Наши клиенты</h2>
-      <div class="swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="client-img">
-              <img
-                src="https://krasnoeibeloe.servicecdn.ru/local/templates/.default/img/logokb-2022.jpg"
-                alt="Client"
-              />
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="client-img">
-              <img
-                src="https://musoranet.su/img/651372_1024_q55.avif"
-                alt="Client"
-              />
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="client-img">
-              <img
-                src="https://musoranet.su/img/34949357_800_q55.avif"
-                alt="Client"
-              />
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="client-img">
-              <img
-                src="https://im.kommersant.ru/gboxtexts/sp_com/logos/049.jpg"
-                alt="Client"
-              />
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="client-img">
-              <img
-                src="https://www.sostav.ru/images/news/2019/11/25/evkz1els.jpg"
-                alt="Client"
-              />
-            </div>
-          </div>
-        </div>
-
-        <!-- Кнопки для навигации -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-      </div>
-    </section>
-
     <section class="free-export">
-      <h2>Мы совершенно бесплатно вывозим следующие позиции:</h2>
+      <h2 class="text-center">
+        Мы совершенно бесплатно вывозим следующие позиции:
+      </h2>
       <p>
-        Стальные/чугунные ванны <br />
-        Радиаторы/батареи отопления <br />
-        Железные раковины/умывальники <br />
+        Чугунные ванны <br />
         Металлические трубы <br />
         Прочий железный хлам <br />
         Бытовую технику <br />
-        Телевизоры, стиральные машинки, холодильники, плиты и духовые шкафы.
+        Стиральные машинки, холодильники, плиты и духовые шкафы.
       </p>
 
       <a href="#" class="cta">Заказать вывоз</a>
@@ -449,9 +369,83 @@
       </div>
     </section>
 
-    <footer class="footer d-none" id="footer">
+    <footer class="footer" id="footer">
       <h2>Контакты</h2>
+      <nav class="footer__nav">
+        <ul class="container footer__contacts-ul">
+          <div class="row">
+            <li class="footer__contacts-li col-md-4 col-12">
+              <ul class="contacts__block">
+                <li>
+                  <i class="bi bi-envelope"></i>
+                  <a href="mailto:mail@mail.com">vivozmusora@mail.ru</a>
+                </li>
+                <li>
+                  <i class="bi bi-telephone"></i>
+                  <a href="tel:+79818087272">+7 (981) 808-72-72</a>
+                </li>
+              </ul>
+            </li>
+            <li class="footer__contacts-li col-md-4 col-12">
+              <ul class="links justify-content-center">
+                <li>
+                  <a href="#catalog">Наши цены</a>
+                </li>
+                <li>
+                  <a href="#reviews">Отзывы</a>
+                </li>
+                <li>
+                  <a href="#footer">Контакты</a>
+                </li>
+              </ul>
+            </li>
+            <li class="footer__contacts-li col-md-4 col-12">
+              <ul class="contacts__media">
+                <li>
+                  <a target="_blank" href="https://wa.me/+79818087272">
+                    <i class="bi bi-whatsapp"></i>
+                  </a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://t.me/Musorovichkov">
+                    <i class="bi bi-telegram"></i>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </div>
+        </ul>
+      </nav>
     </footer>
+
+    <div id="manukyan-web">
+      <a href="https://maanukyaan.github.io/portfolio"
+        ><img
+          src="https://raw.githubusercontent.com/kenshi244/mw-ad/master/manukyan_web_logo.png"
+          alt="Manukyan.Web"
+      /></a>
+
+      <style>
+        #manukyan-web {
+          width: 100%;
+          padding: 30px;
+          background-color: #303030;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
+        #manukyan-web img {
+          height: 50px;
+          transition: 0.12s all linear;
+        }
+
+        #manukyan-web img:hover {
+          transform: scale(1.3);
+          cursor: pointer;
+        }
+      </style>
+    </div>
 
     <!-- Swiper Slider -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
@@ -465,14 +459,7 @@
         },
       });
 
-      const swiper_2 = new Swiper(".swiper-second", {
-        loop: true,
-        slidesPerView: 2,
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-      });
+      const swiper_2 = new Swiper(".swiper-second");
     </script>
   </body>
 </html>
